--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "engines": {
         "node": "^14.15",
         "yarn": "1.22.10"
+    },
+    "dependencies": {
+        "react-elastic-carousel": "^0.11.1"
     }
 }
