--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "yarn": "1.22.10"
     },
     "dependencies": {
+        "@material-ui/core": "^4.11.3",
         "react-elastic-carousel": "^0.11.1"
     }
 }
