--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "yarn": "1.22.10"
     },
     "dependencies": {
-        "@material-ui/core": "^4.11.3",
+        "@material-ui/core": "^4.11.3"
     },
     "devDependencies": {
         "twilio": "^3.56.0"
