--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,7 @@
     "css-loader": "^5.0.0",
     "file-loader": "^6.2.0",
     "foundation-sites": "^6.6.3",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^5.1.0",
     "less-loader": "^8.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
@@ -44,6 +44,7 @@
     "style-loader": "^1.2.1",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-hot-middleware": "^2.25.0",
+    "@material-ui/core": "^4.11.3"
   }
 }
