--- a/server/package.json
+++ b/server/package.json
@@ -45,7 +45,8 @@
     "nodemon": "^2.0.7",
     "webpack": "^5.3.2",
     "webpack-dev-middleware": "^4.0.0",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-hot-middleware": "^2.25.0",
+    "twilio": "^3.56.0"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
