--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "engines": {
         "node": "^14.15",
         "yarn": "1.22.10"
+    },
+    "dependencies": {
+        "react-calendar": "^3.3.1",
+        "react-slick": "^0.28.0",
+        "slick-carousel": "^1.8.1"
     }
 }
