--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "react-calendar": "^3.3.1",
+        "react-icons": "^4.2.0",
         "react-slick": "^0.28.0",
         "slick-carousel": "^1.8.1"
     }
